# mpm-engine

./: .gitignore  AUTHORS.md  README.md  pyproject.toml
benchmarks/: bench_step.py
docs/: MATH_REFERENCE.md  claymore_notes.md  performance.md  speedup_plan.md
examples/: dough_fe_viscous.py  dough_franka.py  dough_franka_composite.py  dough_franka_press.py  dough_franka_threeprong.py  dough_surface_render.py  drop_covariance_sweep.py  gns_baseline.py  gripper_render_dough.py  gripper_shape.py  pour_franka.py  predict_volume_franka.py  predict_volume_rollout.py  pressure_covariance_sweep.py  probe_design_covariance.py  realdata_pipeline.py  rollout_force_video.py  rollout_franka_cotracker.py  shape_planning.py  shear_cell_3d.py  shear_cell_fe.py  speckle_particle_videos.py  splat_sim.py  squeeze_plate_franka.py  surface_track_test.py  three_prong.py  transfer_identify_plan.py  vonmises_identify.py  wrist_ft_franka.py
experiments/: pressure_covariance_sweep.py
fe-weights/: README.md  fe_report.json  fe_viscous_report.json  granular_mu_i.npz  hyperelastic_1inv.npz  hyperelastic_2inv.npz  hyperelastic_fe2_train.json  hyperelastic_fe_train.json  viscous.npz
src/ident/gates/: g1_oracle.py
src/ident/weakform/: grid_assembly.py
src/warpmpm/: __init__.py  _vendor.py  scenes.py
src/warpmpm/adapters/: mujoco_adapter.py
src/warpmpm/colliders/: __init__.py  glass.py
src/warpmpm/core/: solver.py
src/warpmpm/coupling/: backend.py
src/warpmpm/kernels/: __init__.py  mpm_solver_warp.py  mpm_utils.py  warp_utils.py
src/warpmpm/materials/: __init__.py
src/warpmpm/splats/: __init__.py  export.py  io.py
tests/: test_cuda_graph.py  test_engine.py  test_particle_sort.py  test_pour.py  test_splat_export.py
