[project]
name = "warpmpm"
version = "0.0.1"
description = "Fast, modular Warp-MPM engine for robot manipulation of deformable + granular media (dough first, terrain/rovers next). Sparse-grid + implicit, MuJoCo coupling, Isaac-ready."
requires-python = ">=3.12,<3.13"
dependencies = [
    "warp-lang>=1.10.1",
    "torch>=2.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "ty"]
mujoco = ["mujoco>=3.1"]
render = ["matplotlib>=3.8", "imageio>=2.34", "imageio-ffmpeg>=0.4.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warpmpm"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "benchmarks", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E402"]   # _vendor.py mutates sys.path before importing the warp-mpm fork

[tool.ruff.lint.per-file-ignores]
"src/warpmpm/_vendor.py" = ["E402", "F401"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: multi-second physics/benchmark tests"]
