[project]
name = "warpmpm"
version = "0.0.1"
description = "Fast, modular Warp-MPM engine for robot manipulation of deformable + granular media (dough first, terrain/rovers next). Sparse-grid + implicit, MuJoCo coupling, Isaac-ready."
requires-python = ">=3.12,<3.13"
dependencies = [
    "warp-lang>=1.10.1",
    "torch==2.8.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "ty"]
mujoco = ["mujoco>=3.1", "robot_descriptions>=1.10"]   # FrankaArm loads the Panda from robot_descriptions
render = ["matplotlib>=3.8", "imageio>=2.34", "imageio-ffmpeg>=0.4.9", "pillow>=10.0"]
surface = ["scipy>=1.11", "scikit-image>=0.22", "pyvista>=0.43"]   # marching-cubes dough-surface render
io = ["h5py>=3.10"]                                # optional .h5 particle loader (load_from_sampling)
all = ["warpmpm[dev,mujoco,render,surface,io]"]    # everything, for a full dev/demo checkout

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warpmpm"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "benchmarks", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E402", "E701", "E702"]   # E701/E702: compact tuple/render lines

[tool.ruff.lint.per-file-ignores]
"src/warpmpm/kernels/__init__.py" = ["F401"]   # re-export surface
# vendored+extended MLS-MPM kernels: silence star-import/style noise but KEEP real-bug checks
# (F821 undefined-name, F811 redefinition) active
"src/warpmpm/kernels/*.py" = ["E", "I", "UP", "SIM", "B", "RUF", "F401", "F403", "F405", "F841"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: multi-second physics/benchmark tests"]
