[project]
name = "warpmpm"
version = "0.0.1"
license = {text = "MIT"}
description = "Fast, modular Warp-MPM engine for robot manipulation of deformable + granular media (dough first, terrain/rovers next). Sparse-grid + implicit, MuJoCo coupling, Isaac-ready."
requires-python = ">=3.12,<3.13"
dependencies = [
    # kernels use the API subset common to warp 1.10.1 through 1.14+: public warp.float32/
    # int32/array (the warp.types.* aliases were removed in 1.14) and wp.matrix_from_cols
    # (the vec-arg wp.mat33 constructor was removed in 1.14). 1.10.1 is the tested floor;
    # both the engine venv (1.14) and the project venv (1.10.1) run these kernels.
    "warp-lang>=1.10.1,<2",
    "torch>=2.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "ty"]
mujoco = ["mujoco>=3.1", "robot_descriptions>=1.10"]   # FrankaArm loads the Panda from robot_descriptions
render = ["matplotlib>=3.8", "imageio>=2.34", "imageio-ffmpeg>=0.4.9", "pillow>=10.0"]
surface = ["scipy>=1.11", "scikit-image>=0.22", "pyvista>=0.43"]   # marching-cubes dough-surface render
geometry = ["scipy>=1.11", "trimesh>=4.0"]         # mesh->SDF colliders: scipy cKDTree fast path, trimesh mesh IO
ident = ["scipy>=1.11", "osqp>=0.6", "matplotlib>=3.8"]   # warp-free EUCLID identifier (weak-form assembly, ridge/QP solve, gates)
io = ["h5py>=3.10"]                                # optional .h5 particle loader (load_from_sampling)
splats = ["plyfile>=1.0", "scipy>=1.11"]           # Gaussian-splat scenes: PLY load/save (plyfile), filler kNN (scipy cKDTree)
all = ["warpmpm[dev,mujoco,render,surface,geometry,ident,io,splats]"]    # everything, for a full dev/demo checkout

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# three packages in one repo: warpmpm (the warp simulator), and the warp-FREE identifier
# (ident = EUCLID weak-form recovery, common = conventions). The ident/common packages must
# never import warp/torch (except function_encoder_training); tests/test_import_boundaries.py
# enforces it.
packages = ["src/warpmpm", "src/ident", "src/common"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "benchmarks", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E402", "E701", "E702"]   # E701/E702: compact tuple/render lines

[tool.ruff.lint.per-file-ignores]
"src/warpmpm/kernels/__init__.py" = ["F401"]   # re-export surface
# vendored+extended MLS-MPM kernels: silence star-import/style noise but KEEP real-bug checks
# (F821 undefined-name, F811 redefinition) active
"src/warpmpm/kernels/*.py" = ["E", "I", "UP", "SIM", "B", "RUF", "F401", "F403", "F405", "F841"]
# ident/common: the warp-free EUCLID identifier, moved in as-is; relax style but keep F-checks
"src/ident/**/*.py" = ["E", "I", "UP", "SIM", "B", "RUF"]
"src/common/**/*.py" = ["E", "I", "UP", "SIM", "B", "RUF"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: multi-second physics/benchmark tests"]
